MOD: modify image style

--- a/src/app/viewer/viewer.component.html
+++ b/src/app/viewer/viewer.component.html
@@ -1,6 +1,6 @@
 <div class="container">
   <div class="main" id="div" (mousewheel)="doSomething()">
-    <img class="img" id="img" [src]="imgSrc" (dblclick)="resetSize()" (load)="resize()" />
+    <img class="img" #img [src]="imgSrc" (dblclick)="resetSize()" (load)="resize()" />
   </div>
   <div class="open-file" id="open-file" [hidden]="!showOpenFileBtn">
     <h2>Kan Kan</h2>
@@ -27,7 +27,7 @@
       <button (click)="changeTheme()" id="btn-theme">◐</button>
     </div>
   </div>
-  <div class="foot-bar" id="foot-bar">
+  <!-- <div class="foot-bar" id="foot-bar">
     <label id="zoom-per">100%</label>
-  </div>
+  </div> -->
 </div>
