--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,1 +1,11 @@
 /* You can add global styles to this file, and also import other style files */
+@import './style/light.scss';
+
+body,
+html {
+  height: 100%;
+  padding: 0;
+  margin: 0;
+  overflow-y: hidden;
+  background: $bg-color;
+}
