ADD: more images type support

--- a/src/app/viewer/viewer.component.html
+++ b/src/app/viewer/viewer.component.html
@@ -3,7 +3,7 @@
     <img class="img" #img [src]="imgSrc" (dblclick)="resetSize()" (load)="resize()" />
   </div>
   <div class="open-file" id="open-file" [hidden]="!showOpenFileBtn">
-    <h2>Kan Kan</h2>
+    <h2>Comic Viewer</h2>
     <button (click)="openImage()" id="btn-open-file">打开图片</button>
   </div>
   <div style="right: 0;" class="btn-to" (click)="next()" id="btn-to-r">
