ADD: support vertical layout

--- a/src/app/viewer/viewer.component.scss
+++ b/src/app/viewer/viewer.component.scss
@@ -83,6 +83,13 @@ button:disabled {
   user-select: none;
 }
 
+.vImg {
+  max-width: 80%;
+  height: auto;
+  display: block;
+  margin: 0 auto;
+}
+
 .btn-to {
   cursor: pointer;
   position: fixed;
