--- a/src/app/viewer/viewer.component.html
+++ b/src/app/viewer/viewer.component.html
@@ -1,6 +1,13 @@
 <div class="container">
   <div class="main" id="div" (mousewheel)="doSomething()">
-    <img class="img" #img [src]="imgSrc" (dblclick)="resetSize()" (load)="resize()" />
+    <ng-container *ngIf="comicMode === '单开页'">
+      <img class="img" #img [src]="imgSrc" (dblclick)="resetSize()" (load)="resize()" />
+    </ng-container>
+    <ng-container *ngIf="comicMode === '竖版'">
+      <div class="imgContainer">
+        <img class="vImg" *ngFor="let imgSrc of imgSrcs" [src]="imgSrc" (dblclick)="resetSize()" />
+      </div>
+    </ng-container>
   </div>
   <div class="open-file" id="open-file" [hidden]="!showOpenFileBtn">
     <h2>Comic Viewer</h2>
@@ -20,11 +27,12 @@
       <button (click)="next()">▶</button>
     </div>
     <div style="display: block; float: right; padding-right: 90px;">
-      <button (click)="realSize()">↗</button>
+      <!-- <button (click)="realSize()">↗</button>
       <button (click)="initParams()">↙</button>
-      <button (click)="setWallpaper()" id="btn-wallpaper">♡</button>
+      <button (click)="setWallpaper()" id="btn-wallpaper">♡</button> -->
       <!-- <button (click)="showMenu()">菜单</button> -->
-      <button (click)="changeTheme()" id="btn-theme">◐</button>
+      <!-- <button (click)="changeTheme()" id="btn-theme">◐</button> -->
+      <button (click)="changeMode()" id="btn-mode">{{comicMode}}</button>
     </div>
   </div>
   <!-- <div class="foot-bar" id="foot-bar">
