--- a/src/app/viewer/viewer.component.scss
+++ b/src/app/viewer/viewer.component.scss
@@ -53,7 +53,7 @@ button:disabled {
 
 .title {
   position: fixed;
-  width: calc(100% - 160px);
+  width: calc(100% - 220px);
   overflow: hidden;
   text-overflow: ellipsis;
   white-space: nowrap;
@@ -84,7 +84,7 @@ button:disabled {
   display: flex;
   justify-content: center;
   align-items: center;
-  height: 100%;
+  height: calc(100% - 39px);
 }
 
 .container {
